@@ -13,7 +13,7 @@ heat
 0   0   186 255
 50  139 255 255
 19  239 248 255
-212 247 249 255 
+255 255 255 255
 
 spectrum2
 0   0   255 255
