@@ -1,3 +1,7 @@
+* 2005-07-02 Jeremy Sanders <jeremy@jeremysanders.net>
+	- 2D datasets can be saved
+	- 2D datasets can be imported
+	
 * 2005-06-28 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Further Image support
 
